--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"author": "Eyzzi",
 	"license": "Eyzzi",
 	"dependencies": {
+		"body-parser": "^1.18.3",
+		"express": "^4.16.4",
 		"mongoose": "^5.3.1"
 	},
 	"devDependencies": {
